--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
 
   <target name="compile">
     <mkdir dir="classes"/>
-    <javac srcdir="src" destdir="classes" includeAntRuntime="false" />
+    <javac srcdir="src" destdir="classes" debug="on" includeAntRuntime="false" />
   </target>
 
   <target name="run" >
