--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,9 @@
   </target>
 
   <target name="run" >
-    <java classpath="classes;asset" classname="yetris.App" fork="true"/>
+    <java classpath="classes;asset" classname="yetris.App" fork="true">
+      <arg value="-Dswing.aatext=true"/>
+    </java>
   </target>
 
   <target name="all" depends="clean, compile, run"/>
